hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_arity_mismatch1.php
<?hh // strict

function f(): void {
  $a = vec<int, string>[];
}
